--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Colour Me Pretty!</string>
-    <string name="selected_color_index_changed">You\'re now editing color no. %d</string>
+    <string name="selected_color_index_changed">You\'re now editing colour no. %d</string>
     <string name="display_2_circles">Display 2 circles</string>
     <string name="display_3_circles">Display 3 circles</string>
     <string name="display_5_circles">Display 5 circles</string>
