--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="enter_color_set_name">Enter a name for the colour set</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="choose_color_set">Choose a colour set</string>
 </resources>
